--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!--bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <title>Amy's Portfolio</title>
 </head>
 <body>
@@ -39,16 +40,49 @@
 
     <!-- home page -->
     <section id="home" class="introbg">
-        <div class="container-fluid">
-            <h1 class="text-center display-1" style="margin-bottom: 0%; font-family:Optima, Arial; font-weight:bold">Hi I'm Amy!</h1>
-            <h1 class="text-center" style="color:#e89e58">I'm a software engineer.</h1>
-            <img src="assets/flower.png" alt="flower">
-            <img src="assets/half-moon.png" alt="half-moon">
-            <img src="assets/splash.png" alt="splash">
-            <img src="assets/squiggle.png" alt="squiggle">
-            <img src="assets/star.png" alt="star">
-            <img src="assets/square.png" alt="square">
+
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                </div>
+                <div class="col">
+                    2 of 2
+                </div>
+                <div class="col">
+                    2 of 2
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                </div>
+                <div class="col">
+                    <div class="container-fluid">
+                        <h1 class="text-center display-1" style="margin-bottom: 0%; font-family:Optima, Arial; font-weight:bold">Hi I'm Amy!</h1>
+                        <h1 class="text-center" style="color:#e89e58">I'm a software engineer.</h1>
+                    </div>
+                </div>
+                <div class="col">
+                    2 of 2
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                </div>
+                <div class="col">
+                    2 of 2
+                </div>
+                <div class="col">
+                    2 of 2
+                </div>
+            </div>
         </div>
+
+        <img src="assets/flower.png" alt="flower">
+                        <img src="assets/half-moon.png" alt="half-moon">
+                        <img src="assets/splash.png" alt="splash">
+                        <img src="assets/squiggle.png" alt="squiggle">
+                        <img src="assets/star.png" alt="star">
+                        <img src="assets/square.png" alt="square">
     </section>
 
     <!-- about page -->
@@ -59,7 +93,7 @@
                 <h1>About me</h1>
               </div>
               <div class="col-5 vh-100" style="background-color: #e68268;">
-                <img src="assets/polaroid.png" alt="polaroid">
+                <img style="filter: drop-shadow(30px 10px 4px #e7c2ba);" src="assets/polaroid.png" alt="polaroid">
               </div>
             </div>
         </div>
@@ -73,45 +107,77 @@
 
     <!-- Projects page -->
     <section id="projects" class="projectsbg">
-        <h1>My projects</h1>
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+        <div class="container-fluid">
+            <h1>My projects</h1>
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                </div>
+                <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="assets/services.png" class="d-block w-100" alt="Service project">
+                    <h2 class="text-center">Delivery website</h2>
+                    <p class="text-center">Making deliveries fast and efficient from purchase to your doorstep.</p>
+                    <div class="text-center" style="margin-bottom: 60px;">
+                        <a class="btn carousel-button" href="coming_soon.html" role="button">View Project</a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/game.png" class="d-block w-100" alt="Game project">
+                    <h2 class="text-center">Racing game</h2>
+                    <p class="text-center">An interactive and engaging racing game. Customizable with different avatars and car choices.</p>
+                    <div class="text-center" style="margin-bottom: 60px;">
+                        <a class="btn carousel-button" href="coming_soon.html" role="button">View Project</a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/e-commerce.png" class="d-block w-100" alt="E-commerce project">
+                    <h2 class="text-center">Handmade products e-commerce site</h2>
+                    <p class="text-center">An e-commerce website for vendors to showcase and sell their products online.</p>
+                    <div class="text-center" style="margin-bottom: 60px;">
+                        <a class="btn carousel-button" href="coming_soon.html" role="button">View Project</a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/finance.png" class="d-block w-100" alt="Finance project">
+                    <h2 class="text-center">Personal finance analysis website</h2>
+                    <p class="text-center">A great way to visualise and analyse your personal finances in order to make smart financial decisions.</p>
+                    <div class="text-center" style="margin-bottom: 60px;">
+                        <a class="btn carousel-button" href="coming_soon.html" role="button">View Project</a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/hbb.png" class="d-block w-100" alt="Hackathon project">
+                    <h2 class="text-center">Security breach database site</h2>
+                    <p class="text-center">Full-stack Hackathon project run on Gadget. It validates datasets of potential security breaches, complete with an SQL database.</p>
+                    <div class="text-center" style="margin-bottom: 60px;">
+                        <a class="btn carousel-button" href="https://github.com/amykayrala/hackbibis2" role="button">View Project</a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/skolar.png" class="d-block w-100" alt="School project">
+                    <h2 class="text-center">Campus delivery website</h2>
+                    <p class="text-center">An on-campus deliveries website run entirely by students, for students, making university life easier and more efficient.</p>
+                    <div class="text-center" style="margin-bottom: 60px;">
+                        <a class="btn carousel-button" href="https://github.com/skolarship/skolarship.github.io" role="button">View Project</a>
+                    </div>
+                </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+                </button>
             </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="/assets/hbb.png" class="d-block w-100" alt="First project">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/skolar.png" class="d-block w-100" alt="Second project">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/services.png" class="d-block w-100" alt="Service project">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/game.png" class="d-block w-100" alt="Game project">
-              </div>
-              <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
+        </div>
     </section>
 
 </body>
