finised how I work and finishing touches

--- a/coming_soon.html
+++ b/coming_soon.html
@@ -21,16 +21,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#home">Home</a>
+                        <a class="nav-link active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About me</a>
+                        <a class="nav-link" href="index.html#about">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#work">About my work</a>
+                        <a class="nav-link" href="index.html#work">About my work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#projects" tabindex="-1" aria-disabled="true">Projects</a>
+                        <a class="nav-link" href="index.html#projects">Projects</a>
                     </li>
                 </ul>
             </div>
@@ -38,21 +38,43 @@
       </nav>
 
     <!-- page -->
-    <section id="coming_soon" class="introbg">
-        <div class="container-fluid">
-            <h1 class="text-center display-1" style="margin-bottom: 0%; font-family:Optima, Arial; font-weight:bold">Coming soon!</h1>
-            <h1 class="text-center" style="color:#e89e58">I'm a software engineer.</h1>
-            <img src="assets/flower.png" alt="flower">
-            <img src="assets/half-moon.png" alt="half-moon">
-            <img src="assets/splash.png" alt="splash">
-            <img src="assets/squiggle.png" alt="squiggle">
-            <img src="assets/star.png" alt="star">
-            <img src="assets/square.png" alt="square">
-        </div>
-
-        <div class="text-center" style="margin-bottom: 60px;">
-            <a class="btn carousel-button" href="index.html" role="button">Back to home</a>
-        </div>
+    <section id="coming_soon" class="introbg" style="height: 100vh;">
+            <div class="container">
+                <div class="row" style="height: 30%;">
+                </div>
+                <div class="row">
+                    <div class="col-lg-3">
+                    </div>
+                     <div class="col-lg-6">
+                        <div class="text-start" style="position: relative; display: inline-block;">
+                            <img class="star1" src="assets/star.png" alt="star">
+                            <img class="star2" src="assets/star.png" alt="star">
+                        </div>
+                        <h1 class="display-1" style="font-weight:bold; text-align: center;"> Coming soon!</h1>
+                        <div class="text-center" style="margin-bottom: 60px;">
+                            <a class="btn carousel-button" href="index.html" role="button">Back to home</a>
+                        </div>
+                        <div class="text-center" style="position: relative; display: inline-block;">
+                            <img class="star3" src="assets/starpink.png" alt="star">
+                            <img class="star4" src="assets/starpink.png" alt="star">
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class ="text-end">
+                            <img class="half-moon" src="assets/half-moon.png" alt="half-moon">  
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col ">
+                        <img style="width:80%; height: auto;" src="assets/squiggle.png" alt="squiggle">
+                    </div>
+                    <div class="col">
+                    </div>
+                    <div class="col">
+                    </div>
+                </div>
+            </div>
 
 
     </section>
