fixed on monitor

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 
     <!-- home page -->
     <section id="home" class="introbg">
-        <div class="container">
-            <div class="row" style="height: 15%;">
+        <div class="container-fluid vh-80 vw-80">
+            <div class="row h-15" style="height: 15%;">
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col-xl-1">
                 </div>
-                 <div class="col-lg-5 left-intro-col">
+                 <div class="col-xl-5 left-intro-col">
                     
                     <div class="text-end" style="position: relative; display: inline-block;">
                         <img class="star1" src="assets/star.png" alt="star">
@@ -55,7 +55,7 @@
                         <img class="me" src="assets/amy.JPG" alt="me">
                     </div>
                 </div>
-                <div class="col-lg-5" style="justify-content: center; display: flex; flex-direction: column;">
+                <div class="col-xl-5" style="justify-content: center; display: flex; flex-direction: column;">
                     <h1 class="display-1 title">
                         <img class="splash" src="assets/splash.png" alt="splash"> Hi I'm Amy!
                     </h1>
@@ -66,7 +66,7 @@
                     <img class="star3" src="assets/starpink.png" alt="star">
                     <img class="star4" src="assets/starpink.png" alt="star">
                 </div>
-                <div class="col">
+                <div class="col-xl-1">
                 </div>
             </div>
             <div class="row" style="padding-bottom: 40px;">
@@ -74,7 +74,7 @@
                 </div>
                 <div class="col">
                 </div>
-                <div class="col" style="float: left; position: relative;">
+                <div class="col">
                     <div class ="text-end">
                         <img class="half-moon" src="assets/half-moon.png" alt="half-moon">  
                     </div>
@@ -91,9 +91,9 @@
                     <h1>About me</h1>
                     <p style ="padding: 0 0 2rem 0;"><b>I am currently a second-year student at the University of Ottawa, studying Software Engineering</b> with an option in Engineering Management and Entrepreneurship. </br>
                         </br>
-                        With a passion for programming and technology, I’ve gained hands-on experience across multiple roles. During my recent CO-OP term at <b>Nokia</b>, I developed and automated tools for user management, testing, and workflow optimization using Python, REST APIs, and Kafka. Previously at <b>Cisco</b>, I automated various router processes using Ansible. I also completed an internship where I worked as a <b>Full Stack Developer</b> enhancing website designs and functionality. </br> 
+                        With a passion for programming and technology, I’ve gained hands-on experience across multiple roles at <b>Nokia, Cisco</b> and as a Full Stack Developer at <b>Digitera. </b> </br> 
                         </br>
-                        Through my academic career, I’ve become proficient in <b>Python</b> and <b>Java</b>.  Additionally, I was involved in a school project, in which I collaborated with my teammates to <b>create a marketing website (HTML, CSS)</b> and a pitch for our product. </br>
+                        Through my academic career, I’ve become proficient in <b>Python, Java, HTML, CSS </b> through projects and assignments. </br>
                         </br>
                         I am known for being a <b>hard worker, meticulous, creative, organized, and I am always willing to learn</b>. Along my journey, I aspire to further enrich my programming skills, expand my network, and explore new opportunities in the tech industry. </br>
                         </br>
