--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
                             <div class="container">
                                 <div class="row">
                                     <div class="col-lg-4 carousel-col">
-                                        <img src="assets/services.png" class="d-block w-100" alt="Service project">
-                                        <h2 class="text-center">Delivery website</h2>
-                                        <p class="text-center">Making deliveries fast and efficient from purchase to your doorstep.</p>
+                                        <img src="assets/services.png" class="d-block w-100" alt="photography service project">
+                                        <h2 class="text-center">Photography service website</h2>
+                                        <p class="text-center">A photography studio offering a range of services to their clients.</p>
                                         <div class="text-center project-btn">
-                                            <a class="btn carousel-button" href="coming_soon.html" role="button">View Project</a>
+                                            <a class="btn carousel-button" href="https://amykayrala.github.io/photography-service-site" role="button">View Project</a>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 carousel-col">
